--- a/source/_posts/评《水浒传》-前言.md
+++ b/source/_posts/评《水浒传》-前言.md
@@ -7,8 +7,10 @@ tags:
 # 前面的话
 
 开始读《水浒传》是在我初中的时候，当时常用的简体中文字还没有认全，但是
-中国传统文学对不同文化阶层的人都比较友好：有学问的可以读繁体本，能认异
-体字；学问差一点的可以读简体版；不认字的也能去茶馆听书。
+中国传统文学对不同文化阶层的人都比较友好：有学问的可以读繁体原本，能认
+异体字；学问差一点的可以读简体版；不认字的也能去茶馆听书。
+
+<!-- more -->
 
 在初中时喜欢水浒中的打打杀杀，江湖好汉，英雄气概。大体每个青年在那血气
 方刚的年岁都是如我这般的吧。年纪稍大一点呢，再读《水浒传》，那就比较的
@@ -26,12 +28,11 @@ tags:
 地牙痒痒，认为宋江一人投降毁了整个梁山。现在想起来那个天真可爱的我，还
 是挺怀念的。:-)
 
-在社会二十多年的摸爬滚打，吃了那么多白眼，挨了那么多闷棍后，有天回过神
-来再读《水浒传》竟然读出完全不同的感受，现在我读的《水浒传》是完全另
-一部书，对宋江竟然多了一份理解，后来是越来越理解，乃至佩服！
+在社会二十多年的摸爬滚打，看了多少白眼，挨了多少闷棍后，有天回过神来再
+读《水浒传》竟然读出完全不同的感受，现在我读的《水浒传》与以前的是完全
+另一部书，对宋江竟然多了一份理解，后来是越来越理解，乃至佩服和惋惜！
 
 在这里随意记录自己读《水浒传》的感想、思考，形式很散漫，繁体简体混用，
-也没有特定的章节顺序，反正也不为给人看，只是记录，多年后可能自己也就忘
-却了。
+也没有特定的章法，反正也不为给人看，只是记录，多年后可能自己也就忘却了。
 
 -- 壬寅年十月初九
