--- a/source/_posts/评《水浒传》：楔子-張天師祈禳瘟疫-洪太尉誤走妖魔.md
+++ b/source/_posts/评《水浒传》：楔子-張天師祈禳瘟疫-洪太尉誤走妖魔.md
@@ -4,11 +4,12 @@ date: 2022-11-03 09:57:54
 tags:
 ---
 
-# 楔子 張天師祈禳瘟疫 洪太尉誤走妖魔
 
 古典小说，开始总要有点神话色彩，不然哪里有人感兴趣呢？这个楔子就是卖个
 神话鬼怪的关子，也不能说是完全的胡说八道，至少在哪朝哪代交代清楚了，比
 《红楼梦》简单明了吧。
+
+# 民间出现了瘟疫，是天灾更是人祸
 
 {% blockquote %}
 
@@ -45,10 +46,12 @@ tags:
 所以烧香拜佛在某些情况下不是迷信，反而是最好的办法，当然政府只要什么都
 不干，无所谓是烧香还是拜佛，疫情自然就好了。中国社会的瘟疫，一小部分是
 天灾，往往天灾引发的不可收拾的是人祸！所以目前只有中国还在受新冠肺炎的
-疫情折磨，那“亲自部署、亲自指挥”的是不是也去烧个香拜个佛呢？哈哈哈（ _笑
-出了猪叫声_ ......）
+疫情折磨，那“亲自部署、亲自指挥”的是不是也去烧个香拜个佛呢？哈哈哈......
+（ _笑出了猪叫声_ ）
 
 －－ 壬寅年十月初九
+
+# 江西龙虎山
 
 **“江西信州龍虎山”** 估计就是现在江西省鹰潭市西南的龙虎山。
 
