--- a/source/_posts/评《水浒传》：第一回-王教頭私走延安府-九紋龍大鬧史家村.md
+++ b/source/_posts/评《水浒传》：第一回-王教頭私走延安府-九紋龍大鬧史家村.md
@@ -18,13 +18,13 @@ tags:
 
 这第一回就讲出了高俅的出身，其实高俅本是没有正式名字的，只有一个姓。因为排行老二，所以大家都叫他为高二。因为气球踢的好，所以人们有称他为高球，改个单立人的俅字，就作为名字了。
 
-**“帮闲”**是什么意思呢？ **“帮忙”**知道，某人活计、生意忙，事情多而繁杂，朋友去帮助他，这叫“帮忙”。“帮闲”呢？某人很闲，要人帮助？确实是！一些纨袴子弟、官二代、红二代等等，闲来无事，就需要这么一些帮闲的人陪着玩，想着法子花钱。怎么花钱？怎么让其不闲呢？无非就是各种花鸟鱼虫、游山玩水、欺行霸市、调戏妇女等等。
+**“帮闲”**是什么意思呢？**“帮忙”**知道，某人活计、生意忙，事情多而繁杂，朋友去帮助他，这叫“帮忙”。“帮闲”呢？某人很闲，要人帮助？确实是！一些纨袴子弟、官二代、红二代等等，闲来无事，就需要这么一些帮闲的人陪着玩，想着法子花钱。怎么花钱？怎么让这些公子哥不闲呢？无非就是各种花鸟鱼虫、游山玩水、吃酒嫖妓、欺男霸女等等。
 
 所以古来那些“帮闲”的东西是最坏的，一肚子坏水。高俅就是这么一个“帮闲”出身的人。
 
 # 气球
 
-宋朝时期这个气球，繁体写作“氣毬”，不知是不是现代足球的原型，主要是用脚来踢，结合宋朝能用的材料，大概率是一种藤条或者枝条编的中空的球。
+宋朝时期这个气球，繁体写作“氣毬”，不知是不是现代足球的原型，主要是用脚来踢，结合宋朝能用的材料，大概率是一种藤条或者枝条编的中空或者填充动物毛发的球。
 
 
 # 王进是高人，看的通透
@@ -51,4 +51,32 @@ tags:
 
 {% endblockquote %}
 
-王进判断的很准确，就是 **“性命今番難保”**！ 对高俅这种帮闲的人，没有最坏只有更坏，他一定会把事情做绝，最终要了王进的性命！
+王进判断的很准确，就是**“性命今番難保”**！ 对高俅这种帮闲的人，没有最坏只有更坏，他一定会把事情做绝，最终要了王进的性命！王进的应对只能是逃跑，还好王进只有六旬老母，说要逃跑就可以逃跑。
+
+# 四海承平，对百姓未必都好；边关狼烟，对百姓未必都坏
+
+王进能跑到哪里去呢？
+
+{% blockquote %}
+
+王進道：“母親說得是。兒子尋思，也是這般計較。隻有延安府老種經略相公鎮守邊庭，他手下軍官多有曾到京師的，愛兒子使槍棒，何不逃去投奔他們？那裏是用人去處，足可安身立命。”
+
+{% endblockquote %}
+
+因为边关需要抵御北方游牧民族，所以**“那裏是用人去處”**，王进可以凭借自己的本事**“足可安身立命”**。如果天下太平，那么各地都是“高俅”，一般百姓是难以凭借自己的本领安身立命的。
+
+
+# 不留史家庄，王进有大智慧
+
+王进在去延安途中，路过史家庄，机缘巧合做了九纹龙史进的师傅，也是尽心尽力教史进实用的武艺。
+
+{% blockquote %}
+
+史進那裏肯放，說道：“師父隻在此間過了。小弟奉養你母子二人以終天年，多少是好。”
+王進道：“賢弟，多蒙你好心，在此十分之好；隻恐高太尉追捕到來，負累了你，不當穩便；以此兩難。我一心要去延安府投着在老種經略處勾當。那裏是鎮守邊庭，用人之際，足可安身立命。”
+
+{% endblockquote %}
+
+王进不愿意留史家庄，不是史进不孝顺，而是要立足自己的本事才能安身立命！在史家庄，王进仅仅是史进的师傅，史进也已经学有所成，那王进母子在史家庄就是个吃闲饭的了，虽然史进和史太公不至于如此，但是对于王进来说还是难以在史家庄上安身立命的。
+
+在我看来，王进是有大智慧的。
